--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -214,6 +214,21 @@ scheduling, fine-grained power management and thermal management were of medium
 interest and impact. Lighting control and back-up resources were of low
 interest and impact.  
 
+Temperature control and lighting management are utilized as strategies, but considered medium to low interest and impact
+for responding to requests from electricity service providers because they are used as strategies for 
+energy efficiency rather than grid response.
+The infrastructure energy efficiency of the responding supercomputer sites is high, as reflected in their reported
+Power Usage Effectiveness (PUE).  Two sites reported a PUE below 1.25, the majority were between 
+1.25 and 1.5 and the highest was 1.53. Approximately half of the respondents said that they used 
+temperature control and lighting management
+as strategies, but not for grid requests.  Temperature control and lighting management are well documented and understood
+strategies for improving energy efficiency, so it is not surprising that sites with PUEs below 1.5 are using them.
+NOAA comments that their "lights automatically shut off 24x7 
+when there is no motion in the data center."  There is a value in lighting control for 
+energy efficiency purposes, as demonstrated by its having been fully implemented.  NOAA also comments that
+the impact of further lighting control "is so small compared to the HPC demand load that" they would "be surprised 
+if the utility is interested."  
+
 
 Distinguishing interest from impact sheds further insight; some strategies are 
 considered high impact, but not interesting enough to consider deployment.  Facility
