--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -27,13 +27,13 @@ varied significantly. Total power load includes all computing systems plus
 ancillary systems such as power delivery and cooling components.
 There were four sites with total power load greater
 than 10MW, two sites with \textasciitilde 5MW total power load and five
-sites with less than 2MW total power load. We chose less than 3MW intra-hour
+sites with less than 2MW total power load. For those with total power load greater than 10MW, the
+intra-hour fluctuation varied from less than 3MW to 8MW. One of
+\textasciitilde 5MW sites said that they experienced 4MW variability. We chose less than 3MW intra-hour
 variability as the bottom of the scale because we assumed that the
 electricity providers would not be affected by 3MW (or less) 
-fluctuations. For those with total power load greater than 10MW, the
-intra-hour fluctuation varied from less than 3MW to 8MW. One of
-\textasciitilde 5MW sites said that they experienced 4MW variability. The
-rest of the sites were all less than 3MW. Most of the intra-hour variability
+fluctuations. The
+rest of the sites all reported less than 3MW intra-hour fluctuation. Most of the intra-hour variability
 was due to preventative maintenance (again, the power variation includes both computing and ancillary systems).
 
 
