New Graph to replace Table 1

--- a/bib/patki.bib
+++ b/bib/patki.bib
@@ -5038,3 +5038,19 @@ Distributed Processing Symposium},
         year =     2005,
         month =    Nov
 }
+
+@INPROCEEDINGS{Ghatikar2012b,
+AUTHOR = {Venkata Ganti and Girish Ghatikar},
+TITLE = {{Smart Grid as a Driver for Energy-Intensive Industries: A Data Center Case Study}},
+BOOKTITLE = {Grid-Interop 2012},
+MONTH = Dec,
+YEAR = 2012
+}
+
+
+@INPROCEEDINGS{Ghatikar2012a,
+AUTHOR = {Girish Ghatikar and Venkata Ganti and Nance Matson and Mary Ann Piette},
+TITLE = {{Demand Response Opportunities and Enabling Technologies for Data Centers: Findings From Field Studies}},
+BOOKTITLE = {"PG\&E/SDG\&E/CEC/LBNL"},
+YEAR = 2012
+}
