--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -36,65 +36,72 @@ fluctuations. The
 rest of the sites all reported less than 3MW intra-hour fluctuation. Most of the intra-hour variability
 was due to preventative maintenance (again, the power variation includes both computing and ancillary systems).
 
+%Patki: New Graph instead of Table 1
 
-\begin{table}[htbp]
-
+\begin{figure*}
 \begin{center}
-\caption{Caption Number 1}
-\begin{tabular}{|p{65pt}|l|l|}
-\hline
-\textbf{Total Load}&
-\textbf{Variability}&
-\textbf{Frequency} \\
-\hline
-16-17MW&
-5MW&
-weekly \\
-\hline
-13-14MW&
-8MW&
-monthly \\
-\hline
-10-11MW&
-Less than 3MW&
-weekly \\
-\hline
-10-11MW&
-7MW&
-weekly \\
-\hline
-4-5MW&
-Less than 3MW&
-weekly \\
-\hline
-4-5MW&
-4MW&
-weekly \\
-\hline
-1-2MW&
-Less than 3MW&
-weekly \\
-\hline
-1-2MW&
-140kW&
-daily \\
-\hline
-1-2MW&
-Less than 3MW&
-yearly \\
-\hline
-1-2MW&
-200kW or less&
-daily \\
-\hline
-1-2MW&
-Less than 3MW&
-daily \\
-\hline
-\end{tabular}
-\label{tab1}
+\includegraphics[scale=0.7]{NewGraphs/Table1-Graph.pdf}
 \end{center}
-\end{table}
+\end{figure*}
+
+%\begin{table}[htbp]
+%
+%\begin{center}
+%\caption{Caption Number 1}
+%\begin{tabular}{|p{65pt}|l|l|}
+%\hline
+%\textbf{Total Load}&
+%\textbf{Variability}&
+%\textbf{Frequency} \\
+%\hline
+%16-17MW&
+%5MW&
+%weekly \\
+%\hline
+%13-14MW&
+%8MW&
+%monthly \\
+%\hline
+%10-11MW&
+%Less than 3MW&
+%weekly \\
+%\hline
+%10-11MW&
+%7MW&
+%weekly \\
+%\hline
+%4-5MW&
+%Less than 3MW&
+%weekly \\
+%\hline
+%4-5MW&
+%4MW&
+%weekly \\
+%\hline
+%1-2MW&
+%Less than 3MW&
+%weekly \\
+%\hline
+%1-2MW&
+%140kW&
+%daily \\
+%\hline
+%1-2MW&
+%Less than 3MW&
+%yearly \\
+%\hline
+%1-2MW&
+%200kW or less&
+%daily \\
+%\hline
+%1-2MW&
+%Less than 3MW&
+%daily \\
+%\hline
+%\end{tabular}
+%\label{tab1}
+%\end{center}
+%\end{table}
 
 We asked if the supercomputer centers had talked to their electricity
 providers about programs and methods used to balance the grid supply and
