--- a/text/intro.tex
+++ b/text/intro.tex
@@ -1,8 +1,8 @@
-Supercomputing centers(SCs) with petascale\footnote{Petascale computing refers to computing systems capable of atleast \(10^{15}\) floating point instructions per second(FLOPS).} systems for high-performance com- puting(HPC) are realizing the large impact they will be putting on their elec- tricity service providers(ESPs) with peak power demands of 20megawatts(MW) and instantaneous power fluctuations of 8MW. 
+Supercomputing centers(SCs) with petascale\footnote{Petascale computing refers to computing systems capable of atleast \(10^{15}\) floating point instructions per second(FLOPS).} systems for high-performance computing (HPC) are realizing the large impact they will be putting on their electricity service providers (ESPs) with peak power demands of 20megawatts (MW) and instantaneous power fluctuations of 8MW. 
 Today, with the impetus for moving towards Exascale\footnote{Exascale computing refers to computing systems capable of atleast \(10^{18}\)FLOPS.}, the need to address challenges arising from even larger peak power demands and instantaneous power fluctuations will be imperative in aiding electric-grid reliability.
 
 The electric-grid reliability is an extremely important aspect to optimally manage and link electric supply with demand. Changes in electric usage by end-users from normal consumption patterns can affect the electric-supply infrastructure. 
-It is important to understand the effects induced on reliable power-supply by the end-users like SCs, with high power demand and instantaneous fluctua- tions, to help moderate their effects. 
+It is important to understand the effects induced on reliable power-supply by the end-users like SCs, with high power demand and instantaneous fluctuations, to help moderate their effects. 
 Consequently, ESPs are now seeking hourly forecasts of power demand from SCs, a day in advance.
 
 Like every coin has two faces, the large power demand of SCs also make them pivotal in aiding ESPs to maintain reliable supply to other end-users. 
@@ -12,33 +12,32 @@ The above is one among the many other instances where SCs have shown to be resou
 
 In the past, it was large smelters and manufacturing industries who extended great influence on the electric-grid. 
 But today, supercomputing centers with their increasing power demands happen to be key players influencing electric-grid integrity.
-Supercomputing centers want energy efficiency to lower costs, but it is important to understand if this need finds a key interest in ESP.
+Supercomputing centers are concerned about energy efficiency to lower costs, but it is important to understand if this need finds a key interest in ESP.
 Likewise, it is important to understand the significance of electric-grid reliability - a priority for ESP - from the perspective of SC. 
 Only a mutual understanding of concerns between the SC and ESP could lead to evolution of a symbiotic relation and fathom beyond the current producer-consumer paradigm, paving the way for possible integration of HPC with the Electric-Grid.
 
-The Energy Efficient HPC Working Group(\href {http://eehpcwg.lbl.gov/}{EE HPC WG})  has been investigating opportunities for large supercomputing sites to more closely integrate with their electricity service providers.
-The objectives of this investigation are to understand the willingness of SC to co-operate with their ESP, their expectations from ESP, and the feasible measures that the SC could employ to help ESP. 
+The Energy Efficient HPC Working Group(\href {http://eehpcwg.lbl.gov/}{EE HPC WG}) has been investigating opportunities for large supercomputing sites to more closely integrate with their electricity service providers.
+The objectives of this investigation are to understand the willingness of a SC to co-operate with their ESP, their expectations from ESP, and the feasible measures that the SC could employ to help ESP. 
 To achieve our objectives a questionnaire was deployed whose respondents were Top100 List class supercomputer centers in the United States, the results of which are documented in subsequent sections.
 
 %There has been tremendous research advances in the field of Demand-Response(cite DR). , we attempt to understand the existing software infrastructure from the ESP that is available for DR. 
 This work leverages prior work on data center and grid integration opportunities
-done by Lawrence Berkeley National Laboratory’s (LBNL) Demand Response Research Center(cite LBNL DR datacenter integration paper)
+done by Lawrence Berkeley National Laboratory's (LBNL) Demand Response Research Center(cite LBNL DR datacenter integration paper)
 that describes challenges and opportunities in which data centers and electricity
-service providers may interact and how this integration can advance new market opportunities. \footnote{LBNL
-Data Center Grid Integration Activities: http://drrc.lbl.gov/projects/dc} 
+service providers may interact and how this integration can advance new market opportunities\footnote{LBNL
+Data Center Grid Integration Activities: http://drrc.lbl.gov/projects/dc}.
 %We may want to edit the part below this once other sections are finalized, the below content would find a better place when the above model is explained(next section in future)
 This integration model describes programs that are used by some of the electricity service providers to encourage particular responses by their customers and methods used to balance the electric grid supply and demand.
-The findings also describe strategies that data centers might employ for utility programs to modify their electricity and power requirements to lower costs and benefit from utility incentives. 
-The EE HPC WG Team adopted this model with slight tweaks to reflect the supercomputing environment focus 
-(versus the data center as described by LBNL's Demand Response Research Center).
-%Perhaps one of the most straightforward ways that supercomputing centers can begin the process of participating in demand-response is by using this existing software infrastructure to manage their electricity requirements in a tightly coupled manner, facilitating energy efficiency.
+%The findings also describe strategies that data centers might employ for utility programs to modify their electricity and power requirements to lower costs and benefit from utility incentives. 
+%The EE HPC WG Team adopted this model with slight tweaks to reflect the supercomputing environment focus (versus the data center as described by LBNL's Demand Response Research Center).
+Perhaps one of the most straightforward ways that SCs can begin the process of participating in demand-response is by using this existing software infrastructure to manage their electricity requirements in a tightly coupled manner with their ESPs, facilitating both energy efficiency and grid reliability.
 
 %\href{http://drrc.lbl.gov/publications/demand-response-and-open-automated-demand-response-opportunities-data-centers}
 %{http://drrc.lbl.gov/publications}
 
-This paper distinguishes the supercomputer center as having unique characteristics that distinguish it from the data center. As opposed to data centers, supercomputer centers have very high system utilization and are not likely to use virtualization as a strategy.  
-Also, supercomputer applications are generally not easily portable between geographic locations for a variety of reasons; security, data-locality, system tuning. 
-Therefore, although included in the LBNL model for data centers, both virtualization and geographic load shifting were eliminated as potential supercomputer center strategies.
+%This paper distinguishes the supercomputer center as having unique characteristics that distinguish it from the data center. As opposed to data centers, supercomputer centers have very high system utilization and are not likely to use virtualization as a strategy.  
+%Also, supercomputer applications are generally not easily portable between geographic locations for a variety of reasons; security, data-locality, system tuning. 
+%Therefore, although included in the LBNL model for data centers, both virtualization and geographic load shifting were eliminated as potential supercomputer center strategies.
 
 Section 2 of this paper describes in greater detail the model for
 integrating supercomputer centers and the electrical grid. Section 3 
