--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -46,11 +46,11 @@ address2, Country}
 Some of the largest supercomputer centers in the United States are developing new relationships with their electricity service providers. 
 These relationships, similar to other commercial and industrial facilities, are driven by mutual interest to save energy costs and improve electricity grid reliability.
 Supercomputer centers are concerned about electricity price, quality, environmental impact and availability.
-Electricity service providers are concerned about supercomputer center’s impact on the electrical grid reliability; for energy consumption, peak power and fluctuations in power.
+Electricity service providers are concerned about supercomputer center's impact on the electrical grid reliability; for energy consumption, peak power and fluctuations in power.
 Supercomputer center power demand can be greater than 20 megawatts (MW) or more - the theoretical peak power requirements are greater than 45MW - and re-occurring intra-hour variability can exceed 8MW.
 As a consequence, there are some supercomputer centers whose electricity service providers are asking for hourly forecasts of power demand, a day in advance.
-This paper explores today’s relationships, potential partnerships and possible integration be- tween supercomputer centers and their electricity service providers, and its value.
-It evinces the challenges for this possible HPC-Grid integration, and then cites opportunities to overcome the barriers using feedback from a questionnaire of Top 100 List sized supercomputer centers in the United States.
+This paper explores today's relationships, potential partnerships and possible integration between supercomputer centers and their electricity service providers.
+It evinces the challenges for the possible HPC-Grid integration, and then lists opportunities to overcome the barriers using feedback from a questionnaire of Top 100 List sized supercomputer centers in the United States.
 \end{abstract}
 
 %
